# object-storage-client

./: LICENSE  Readme.md  pyproject.toml  setup.cfg  setup.py  tests.py
src/: ObjectStorageClient.py  S3Client.py  SwiftClient.py  __init__.py  __main__.py  tests.py
tests/: tests.py
