[metadata]
name = obs_client
version = 0.0.7
author = totalus
description = Universal Object Storage Client
long_description = Universal Object Storage Client that supports multiple object storage backend through a single API
url = https://github.com/Totalus/object-storage-client
license_file = LICENSE

[options]
python_requires = >=3.7, <4
# packages =
#     obs_client
package_dir =
    obs_client=src
packages=find:

[options.packages.find]
where=src